remove phone, fix txt-align, change avatar

--- a/css/about.css
+++ b/css/about.css
@@ -15,7 +15,6 @@ div.row{
 	font-family: helvetica;
 	color: #051937;
 	padding: 0px 0px 20px 30px;
-    text-align: center;
     font-weight: bold;
 }
 .col .contents{
